# ollama-chat-app

./: .gitignore  README.md  TODO.md
ollama-chat-backend/: Cargo.toml
ollama-chat-backend/src/: main.rs
ollama-chat-frontend/: index.html  package-lock.json  package.json
ollama-chat-frontend/src/: App.css  App.tsx  index.css
