[package]
name = "ollama-chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"
futures-util = "0.3"
hyper = "0.14"
tokio-stream = "0.1"
